backend/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: default
  labels:
    app: app
spec:
  replicas: 1

  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      serviceAccountName: internal-kubectl
      volumes:
        - name: project-pv-storage
          persistentVolumeClaim:
            claimName: projects-pv-claim-default
      containers:
        - name: app
          image: node-app
          workingDir: /app
          volumeMounts:
            - mountPath: /app/projects
              name: project-pv-storage
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
          ports:
            - containerPort: 8888
