backend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-svc
  namespace: default
spec:
  type: NodePort
  selector:
    app: app
  ports:
    - port: 8888
      targetPort: 8888
